Display helpful text if there are no annotations

--- a/projects/alveo-transcriber/src/lib/alveo-transcriber.component.css
+++ b/projects/alveo-transcriber/src/lib/alveo-transcriber.component.css
@@ -57,6 +57,14 @@ button {
   margin: 0.2em;
 }
 
+#no-annotations {
+  text-align: center;
+  font-size: 22px;
+}
+#no-annotations h3 {
+  padding-bottom: 10px;
+}
+
 .top-halign {
   display: flex;
   padding-bottom: 0.6rem;
