--- a/src/app/alveo-ui/devconsole/devconsole.component.html
+++ b/src/app/alveo-ui/devconsole/devconsole.component.html
@@ -1,8 +1,9 @@
 <div class="control-panel">
-  <h4>Debug Mode</h4>
-  <h3>Database Console</h3><br>
-  <button mat-raised-button color="primary" (click)="this.refreshData()">Refresh item lists (via API)</button>
-  <button mat-raised-button color="primary" class="btn-large" (click)="this.resetSession()">Reset session</button>
-  <button mat-raised-button color="primary" class="btn-large" (click)="this.deleteCache()">Delete Cache</button>
-  <button mat-raised-button color="primary" class="btn-large" (click)="this.deleteAnnotations()">Delete Annotations</button>
+  <p>Debug Controls</p>
+  <div id="controls">
+    <button mat-raised-button color="primary" (click)="this.refreshData()">Refresh item lists (via API)</button>
+    <button mat-raised-button color="primary" class="btn-large" (click)="this.resetSession()">Reset session</button>
+    <button mat-raised-button color="primary" class="btn-large" (click)="this.deleteCache()">Delete Cache</button>
+    <button mat-raised-button color="primary" class="btn-large" (click)="this.deleteAnnotations()">Delete Annotations</button>
+  </div>
 </div>
