--- a/src/app/alveo-ui/lists/items/item/item.component.css
+++ b/src/app/alveo-ui/lists/items/item/item.component.css
@@ -1,12 +1,12 @@
 .button-aligner {
   display: flex;
+  justify-content: right;
+  align-items: right;
 }
 
 button {
-  margin-left: auto;
-  text-align: left;
   border-radius: 0;
-  margin-bottom: 0.1em;
+  margin: 0.1em;
 }
 
 button:hover {
