--- a/src/app/alveo-ui/lists/items/item/item.component.html
+++ b/src/app/alveo-ui/lists/items/item/item.component.html
@@ -14,6 +14,7 @@
 
   <div *ngIf="this.audioSources.length > 0">
     <p>Annotations: {{ this.getAnnotationCount() }}</p>
+    <p>Remotely stored: {{ this.remotelyStored }}</p>
 
     <div class="audio-channel">
       <p>Use audio channel: </p>
@@ -24,6 +25,11 @@
     </div>
 
     <div class="button-aligner">
+      <button mat-raised-button
+        (click)="this.upload()"
+        color="primary">
+        Upload
+      </button>
       <button mat-raised-button
         (click)="this.onTranscribe()"
         color="primary">
