Set width to 100% when display is small

--- a/projects/alveo-transcriber/src/lib/alveo-transcriber.component.css
+++ b/projects/alveo-transcriber/src/lib/alveo-transcriber.component.css
@@ -72,3 +72,9 @@ button {
   justify-content: center;
   flex-align: center;
 }
+
+@media only screen and (max-width: 40em) {
+  .container {
+    width: 100%;
+  }
+}
