--- a/projects/alveo-transcriber/src/lib/transcription-list-editor/transcription-list-editor.component.css
+++ b/projects/alveo-transcriber/src/lib/transcription-list-editor/transcription-list-editor.component.css
@@ -1,13 +1,8 @@
-.annotation-controls {
-  display: flex;
-  align-items: center;
-}
-
 .annotation-forms {
+  flex: 1 1 auto;
   display: flex;
   flex-wrap: nowrap;
   flex-display: column;
-  flex: 1 1 auto;
 }
 
 .mat-icon {
@@ -24,19 +19,18 @@
 
 .annotation {
   display: flex;
-  flex: 1 1 auto;
-  padding-top: 0.6em;
+
+  align-items: center;
 }
 
 .speaker {
-  align-self: flex-end;
-  margin-left: 1em;
-  margin-right: 1em;
+  align-self: flex-end; /* Otherwise it will strangely be up higher than the caption field */
+  margin: 0 5px 0 7px;
+  max-width: 80px;
 }
 
 .caption {
   flex: 1 1 100%;
-  margin-right: 1em;
 }
 
 .selected {
