--- a/projects/alveo-transcriber/src/lib/alveo-transcriber.component.css
+++ b/projects/alveo-transcriber/src/lib/alveo-transcriber.component.css
@@ -1,7 +1,3 @@
-:host {
-  min-height: 1000px;
-}
-
 #player-loader {
   margin: auto;
   margin-top: 50px;
@@ -13,9 +9,6 @@
   margin-top: 10px;
 }
 
-.extra-height {
-  height: 800px;
-}
 .settings {
   display: flex;
   align-items: center;
@@ -49,7 +42,8 @@
 }
 
 .annotation-container {
-  height: calc(100vh - 370px);
+  min-height: 200px;
+  max-height: calc(100vh - 370px);
   overflow-y: auto;
 }
 
