--- a/src/app/alveo-ui/transcriber/transcriber.component.css
+++ b/src/app/alveo-ui/transcriber/transcriber.component.css
@@ -20,3 +20,8 @@
   overflow: hidden;
   white-space: nowrap;
 }
+#revision-status-text {
+  text-align: right;
+  font-size: 12px;
+  max-width: 73em;
+}
