Replace annotations service with transcription service
Encapsulates annotations, provides necessary metadata about the annotations

--- a/src/app/alveo-ui/lists/items/item/item.component.html
+++ b/src/app/alveo-ui/lists/items/item/item.component.html
@@ -31,7 +31,7 @@
         (click)="this.upload()"
         [disabled]="true"
         color="primary">
-        Revisions
+        Download Annotations
       </button>
       <button mat-raised-button
         (click)="this.onTranscribe()"
