--- a/src/app/alveo-ui/devconsole/devconsole.component.html
+++ b/src/app/alveo-ui/devconsole/devconsole.component.html
@@ -3,7 +3,7 @@
   <div id="controls">
     <button mat-raised-button color="primary" (click)="this.refreshData()">Refresh item lists (via API)</button>
     <button mat-raised-button color="primary" class="btn-large" (click)="this.resetSession()">Reset session</button>
-    <button mat-raised-button color="primary" class="btn-large" (click)="this.deleteCache()">Delete Cache</button>
-    <button mat-raised-button color="primary" class="btn-large" (click)="this.deleteAnnotations()">Delete Annotations</button>
+    <button mat-raised-button color="primary" class="btn-large" (click)="this.deleteCache()">Clear Alveo cache</button>
+    <button mat-raised-button color="primary" class="btn-large" (click)="this.deleteAnnotations()">Delete Transcriptions</button>
   </div>
 </div>
