Automatically upload on load if upload pending&authed, store remote id on save

--- a/src/app/alveo-ui/transcriber/transcriber.component.html
+++ b/src/app/alveo-ui/transcriber/transcriber.component.html
@@ -38,7 +38,7 @@
 
       (exit)="this.exit()"
       (autosegment)="this.autoSegment($event)"
-      (save)="this.saveAnnotations($event)">
+      (save)="this.saveTranscription($event)">
     </avl-ngt-transcriber>
   </div>
 </div>
