--- a/src/app/alveo-ui/transcriber/transcriber.component.html
+++ b/src/app/alveo-ui/transcriber/transcriber.component.html
@@ -15,7 +15,7 @@
     <div id="revision-status-text">
       <p>Current revision: latest (<a href="javascript:void(0)" (click)="this.promptRevisionChange()">Change</a>)</p>
       <p id="revision-error-text" [hidden]="this.authService.isLoggedIn()">Not logged in. Revisions not possible.</p>
-      <p [hidden]="this.lastSave == null && !this.isSaving">Last save {{this.lastSave | date:'shortTime'}}<span [hidden]="this.authService.isLoggedIn()"> (Local Only)</span></p>
+      <p [hidden]="this.lastSave == null && !this.isSaving">Last save {{this.lastSave | date:'shortTime'}}<span [hidden]="!this.transcription.isPendingUpload"> (Local Only)</span></p>
       <p [hidden]="this.lastSave != null && !this.isSaving">No changes made.</p>
       <p [hidden]="!this.isSaving">Saving...</p>
     </div>
