--- a/src/app/alveo-ui/transcriber/revision-selector/revision-selector.component.css
+++ b/src/app/alveo-ui/transcriber/revision-selector/revision-selector.component.css
@@ -14,6 +14,10 @@
   cursor: pointer;
 }
 
+#revision-restore {
+  margin-right: 5px;
+}
+
 mat-dialog-content {
   width: 35em;
 }
@@ -25,11 +29,23 @@ mat-list-item-content {
 
 .revision-container {
   padding: 10px;
-  background:  lightgrey;
+  background: rgb(230, 230, 230);
   width: 100%;
 }
 
 .revision-container:hover {
   background: lightblue;
   cursor: pointer;
+}
+
+.revision-container.noSelect,
+.revision-container.noSelect:hover {
+  background: rgb(210, 210, 210);
+  cursor: default;
+}
+
+.revision-container.selected,
+.revision-container.selected:hover {
+  background: orange;
+  cursor: default;
 }
