--- a/src/app/alveo-ui/transcriber/transcriber.component.html
+++ b/src/app/alveo-ui/transcriber/transcriber.component.html
@@ -34,6 +34,7 @@
       [showSegmentorServiceButton]="true"
       [showCSVExportButton]="true"
       [showJSONExportButton]="true"
+      [showWebVTTExportButton]="true"
       [autoPlay]="true"
       [isReadOnly]="this.isReadOnly"
 
