--- a/src/app/alveo-ui/auth/auth.component.css
+++ b/src/app/alveo-ui/auth/auth.component.css
@@ -1,18 +1,18 @@
-#title {
+h1 {
   text-align: center;
-  font-size: 2em;
+  font-size: 32px;
 }
 
-#dialog {
-  max-width: 45em;
-  padding: 0 1.25em;
+button {
+  font-size: 26px;
+  padding: 4px 16px;
+}
+
+mat-dialog-content {
+  max-width: 720px;
+  padding: 0 20px;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-}
-
-#login-button {
-  font-size: 2em;
-  padding: 0.3em 0.6em 0.3em 0.6em;
 }
