Refactor, standardize, comment

--- a/src/app/alveo-ui/loading-spinner/loading-spinner.component.css
+++ b/src/app/alveo-ui/loading-spinner/loading-spinner.component.css
@@ -1,11 +1,11 @@
-.container {
+#container {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
 }
 
-.container.pageFill {
+#container.pageFill {
   height: 80vh;
 }
 
