--- a/src/app/alveo-ui/listindex/listtable/listtable.component.html
+++ b/src/app/alveo-ui/listindex/listtable/listtable.component.html
@@ -1,38 +1,38 @@
-<div id="conftable" class="mat-elevation-z8">
+<div id="data-table" class="mat-elevation-z4">
   <mat-form-field id="search-field">
-    <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Search">
+    <input matInput (keyup)="applySearchFilter($event.target.value)" placeholder="Search item lists">
   </mat-form-field>
-  <mat-table #table [dataSource]="dataSource">
 
+  <mat-table #table [dataSource]="dataSource">
     <!--- Note that these columns can be defined in any order.
-          The actual rendered columns are set as a property on the row definition" -->
+          The actual rendered columns are set as a property on the row definition -->
 
     <!-- ID Column -->
     <ng-container matColumnDef="listName">
-      <mat-header-cell *matHeaderCellDef> Item List Name </mat-header-cell>
-      <mat-cell *matCellDef="let row"> {{row.name}} </mat-cell>
+      <mat-header-cell *matHeaderCellDef>Item List Name</mat-header-cell>
+      <mat-cell *matCellDef="let row">{{row.name}}</mat-cell>
     </ng-container>
 
     <!-- Progress Column -->
     <ng-container matColumnDef="items">
-      <mat-header-cell *matHeaderCellDef> Items </mat-header-cell>
-      <mat-cell *matCellDef="let row"> {{row.num_items}} </mat-cell>
+      <mat-header-cell *matHeaderCellDef>Items</mat-header-cell>
+      <mat-cell *matCellDef="let row">{{row.num_items}}</mat-cell>
     </ng-container>
 
     <!-- Name Column -->
     <ng-container matColumnDef="shared">
-      <mat-header-cell *matHeaderCellDef> Shared </mat-header-cell>
-      <mat-cell *matCellDef="let row"> {{row.shared}} </mat-cell>
+      <mat-header-cell *matHeaderCellDef>Shared</mat-header-cell>
+      <mat-cell *matCellDef="let row">{{row.shared}}</mat-cell>
     </ng-container>
 
     <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
-    <mat-row class="clickable" (click)="this.onSelect(row)" *matRowDef="let row; columns: displayedColumns;"></mat-row>
+    <mat-row class="clickable" (click)="this.itemListSelect.emit(row)" *matRowDef="let row; columns: displayedColumns;"></mat-row>
   </mat-table>
 
   <mat-paginator #paginator
-                [length]="this.getDataCount()"
+                [length]="this.tableData.length"
                 [pageIndex]="0"
-                [pageSize]="25"
-                [pageSizeOptions]="[5, 10, 25, 100]">
+                [pageSize]="20"
+                [pageSizeOptions]="[10, 20, 50, 100]">
   </mat-paginator>
 </div>
