Commenting and format improvements

--- a/src/app/alveo-ui/alveo-ui.component.html
+++ b/src/app/alveo-ui/alveo-ui.component.html
@@ -1,2 +1,5 @@
+<!-- The navbar is intended to functional globally, regardless of which active route is currently selected. -->
 <nav></nav>
+
+<!-- The router-outlet module (from ./routing.module.ts) contains all of the important routes that will get displayed right here by this selector. That way we can have templates be broken up and cleaner by having multiple views, and just have them rendered by the router-outlet here. -->
 <router-outlet></router-outlet>
