--- a/src/app/alveo-ui/login-dialog/login-dialog.component.html
+++ b/src/app/alveo-ui/login-dialog/login-dialog.component.html
@@ -15,9 +15,11 @@
 
 <ng-template #authDialogFirstRun>
   <h2 class="mat-h2">
-    Welcome. This is the Alveo Transcription Tool, a transcription tool web application.
-    Before you begin, you will need some data. In order to work with some, it is best
-    to register an Alveo account <a href="http://alveo.edu.au/">here</a>.
+    Welcome.
+    This is the Alveo Transcription Tool, a transcription tool web application.
+    Before you begin, you will need some data.
+    In order to work with some, it is best to register an Alveo account
+     <a href="http://alveo.edu.au/">here</a>.
   </h2>
   <h2 class="mat-h2">Already have an account? Then you're just one step away!</h2>
 </ng-template>
